# beancompat

./: .gitignore  CLAUDE.md  README.md  conftest.py  flake.nix
.claude/: settings.local.json
.claude/hooks/: session-start.sh
docs/issues/: ADAPTER-001_adapter-limabean.md  ADAPTER-002_adapter-turbobean.md  ADAPTER-003_adapter-rustledger.md  ADAPTER-004_adapter-other-languages.md  FAVA-001_options-dcontext-neutral.md  FAVA-002_missing-sentinel.md  FAVA-003_cap-hash.md  FAVA-004_typed-query-columns.md  FAVA-005_options-coverage-fixture.md  FAVA-006_cap-plugins-registration.md  FAVA-007_cap-summarize.md  FAVA-008_cap-ingest.md  FAVA-009_loader-private-api.md  README.md  adapter-limabean.md  adapter-other-languages.md  adapter-rustledger.md  cap-hash.md  (+9 more)
fixtures/: README.md
implementations/: adapter.py
implementations/limabean/: Cargo.toml  __init__.py
implementations/limabean/src/: main.rs
scripts/: fixture_format.py  generate_fixtures.py  issues.py  run_fixtures.py
strategies/: __init__.py  accounts.py  amounts.py  dates.py  transactions.py
tests/: README.md  conftest.py  test_accounts.py  test_balance.py  test_booking_discrepancies.py  test_bql.py  test_cost_inventory.py  test_cross_impl.py  test_currency_conversions.py  test_directives.py  test_discrepancies.py  test_fava_compat.py  test_fixtures.py  test_flags.py  test_hash.py  test_includes.py  test_ingest.py  test_interpolation.py  test_metadata.py  test_number_formatting.py  test_options.py  test_parse.py  test_plugins.py  test_prices.py  test_round_trip.py  test_summarize.py  test_tags_links.py
(+28 files in other folders)
